--- a/src/scss/themes/ng/body.scss
+++ b/src/scss/themes/ng/body.scss
@@ -2904,12 +2904,20 @@ a[role="button"].cui-button-appearance-link {
 	.cui-alert-problem {
 		> .cui-layer-pane {
 			> .cui-vertical-layout-center {
+				display: block; // prevent content cut-off when its overflowing
 				position: relative;
 				min-height: 66px;
 				max-width: 375px;
-				padding-left: 74px;
-				margin-right: 9px;
+				padding: 0 9px 0 74px;
 				justify-content: center;
+				
+				> :first-child {
+					padding-top: 10px;
+				}
+				
+				> :last-child {
+					padding-bottom: 10px;
+				}
 
 				&:before {
 					font-family: 'FontAwesome';
